[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Menu_UI/Player_Info.gd" type="Script" id=2]
[ext_resource path="res://Menu_UI/Username/Username.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menu_UI/Username/Change_username.tscn" type="PackedScene" id=4]

[node name="Player_Info" type="Control"]
margin_right = 300.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="HBoxContainer" parent="."]
rect_min_size = Vector2( 300, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="CenterContainer"]
margin_right = 44.0
margin_bottom = 50.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 48.0
margin_right = 198.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 150.0
margin_bottom = 20.0

[node name="Name" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 50.0
margin_bottom = 20.0
text = "Name"
flat = true

[node name="Level" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 54.0
margin_right = 100.0
margin_bottom = 20.0
text = "Level"
flat = true

[node name="Levelprogress" type="ProgressBar" parent="CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 150.0
margin_bottom = 38.0
max_value = 1.0

[node name="Friends" type="Button" parent="CenterContainer"]
margin_left = 202.0
margin_right = 268.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
text = "FRIENDS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username" parent="." instance=ExtResource( 3 )]

[node name="Change_username" parent="." instance=ExtResource( 4 )]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/Name" to="." method="_on_Name_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/Level" to="." method="_on_Level_pressed"]
[connection signal="pressed" from="CenterContainer/Friends" to="." method="_on_Friends_pressed"]
